Dockerize, Mix docker, distillery configuration

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 /deps
 /*.ez
 .tags
+teebox.tar.gz
+/rel/teebox/
+node_modules
+priv/static
 
 # Generated on crash by the VM
 erl_crash.dump
@@ -16,3 +20,6 @@ erl_crash.dump
 # secrets file as long as you replace its contents by environment
 # variables.
 /config/prod.secret.exs
+
+# Env conf files
+/config/*.env
