--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -8,7 +8,7 @@ RUN \
     apk update && \
     apk --no-cache --update add \
       git make g++ nodejs python \
-      elixir@1.4.2 && \
+      elixir@edge && \
     rm -rf /var/cache/apk/*
 
 # Install Hex+Rebar
