Webpack, React, Redux, React-Router, Jest and release build

--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -29,4 +29,8 @@ RUN npm install
 
 COPY . .
 
+# Compile the client
+RUN npm run release
+
+# Build the release
 RUN mix release --env=prod --verbose
