--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 teebox.tar.gz
 /rel/teebox/
 node_modules
+client/npm-debug.log
+client/node_modules
+
 priv/static
 
 # Generated on crash by the VM
