--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ teebox.tar.gz
 node_modules
 client/npm-debug.log
 client/node_modules
+assets/node_modules
 
-priv/static
+priv/static/
 
 # Generated on crash by the VM
 erl_crash.dump
