--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,10 @@
 teebox.tar.gz
 /rel/teebox/
 node_modules
-client/npm-debug.log
-client/node_modules
 assets/node_modules
+assets/npm-debug.log
 
-priv/static/
+priv/static/**/*
 
 # Generated on crash by the VM
 erl_crash.dump
