--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,4 +1,4 @@
-FROM bitwalker/alpine-erlang:19.3
+FROM bitwalker/alpine-erlang:19.3.4
 
 ENV HOME=/opt/app/ TERM=xterm
 
@@ -6,8 +6,10 @@ ENV HOME=/opt/app/ TERM=xterm
 RUN \
     echo "@edge http://nl.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
     apk update && \
+    apk --no-cache --update upgrade musl && \
     apk --no-cache --update add \
-      git make g++ nodejs python \
+      git make g++ \
+      nodejs nodejs-npm python \
       elixir@edge && \
     rm -rf /var/cache/apk/*
 
@@ -20,7 +22,10 @@ WORKDIR /opt/app
 ENV MIX_ENV=prod
 
 # Cache elixir deps
+# https://github.com/Recruitee/mix_docker/issues/29
+COPY config/* config/
 COPY mix.exs mix.lock ./
+
 RUN mix do deps.get, deps.compile
 
 COPY . .
