--- a/client/package.json
+++ b/client/package.json
@@ -15,13 +15,14 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "redux-oauth": "^2.0.3",
     "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.10",
-    "semantic-ui-react": "^0.68.3"
+    "semantic-ui-css": "^2.2.11",
+    "semantic-ui-react": "^0.71.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
