--- a/client/package.json
+++ b/client/package.json
@@ -17,24 +17,33 @@
     "react-dom": "^15.5.4",
     "redux-oauth": "^2.0.3",
     "react-redux": "^5.0.4",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
+    "react-router": "^3.0.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.11",
     "semantic-ui-react": "^0.71.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.6.5",
     "babel-core": "^6.24.1",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^7.0.0",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.6.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
+    "enzyme": "^2.3.0",
+    "enzyme-to-json": "^1.5.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "redux-mock-store": "^1.0.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
