--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
     "react-dom": "^15.6.1",
+    "react-functional": "^1.2.0",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.0.2",
     "sass-loader": "^6.0.3",
