--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "history": "^4.6.1",
+    "immutable": "^3.8.1",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "redux-oauth": "^2.0.3",
+    "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
+    "redux-oauth": "^2.0.3",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.11",
     "semantic-ui-react": "^0.71.2"
