--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@
 teebox.tar.gz
 /rel/teebox/
 node_modules
-assets/node_modules
+/assets/node_modules
+/client/node_modules
 npm-debug.log
 
 priv/static
