--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
+    "redux-form": "^7.1.1",
     "redux-oauth": "^2.0.3",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.11",
