Guardian access tokens

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     image: postgres
 
   run_release:
-    image: 377092858912.dkr.ecr.us-east-1.amazonaws.com/teebox.io:0.0.3.20-eb3bc36809
+    image: IMAGE:TAG
     command: foreground
     env_file:
       - secrets.env
