--- a/secrets.env.sample
+++ b/secrets.env.sample
@@ -1,2 +1,5 @@
-FACEBOOK_CLIENT_ID=<id>
-FACEBOOK_CLIENT_SECRET=<secret>
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+SECRET_KEY_BASE=
+GUARDIAN_SECRET_KEY=
+PHAUXTH_TOKEN_SALT=
