--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "redux-form": "^7.1.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.11",
-    "semantic-ui-react": "^0.71.2"
+    "semantic-ui-react": "^0.71.2",
+    "styled-components": "^2.2.3"
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.9.0",
