--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
     "redux-form": "^7.1.1",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.11",
     "semantic-ui-react": "^0.71.2",
@@ -53,6 +54,7 @@
     "react-functional": "^1.2.0",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.0.2",
+    "redux-saga-test-plan": "^3.3.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
