--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.16.2",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
+    "js-cookie": "^2.2.0",
     "mirror-creator": "^1.1.0",
+    "moment": "^2.19.4",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "prop-types": "^15.5.10",
