--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^2.2.0",
     "mirror-creator": "^1.1.0",
     "moment": "^2.19.4",
+    "normalize-object": "^1.1.5",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "prop-types": "^15.5.10",
