--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - .:/app
       - /var/run/docker.sock:/tmp/sock
       - /var/run/docker.sock:/var/run/docker.sock
-      - /usr/bin/docker:/usr/bin/docker
+      - /usr/local/bin/docker:/usr/local/bin/docker
     ports:
       - "4000:4000"
     privileged: true
