--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-immutable-proptypes": "^2.1.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.4",
     "react-router": "^3.0.5",
     "redux": "^3.6.0",
