--- a/client/package.json
+++ b/client/package.json
@@ -62,7 +62,8 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
     "url-loader": "^0.5.8",
-    "webpack": "3.8.1"
+    "webpack": "3.8.1",
+    "webpack-bundle-analyzer": "^2.10.0"
   },
   "main": "app.js",
   "directories": {
