--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,8 @@
     "redux-form": "^7.1.1",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-css": "^2.2.11",
-    "semantic-ui-react": "^0.71.2",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.81.1",
     "styled-components": "^2.2.3"
   },
   "devDependencies": {
@@ -49,12 +49,12 @@
     "css-loader": "^0.14.5",
     "enzyme": "^2.3.0",
     "enzyme-to-json": "^1.5.0",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
     "file-loader": "^0.11.1",
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
     "react-dom": "^15.6.1",
-    "react-functional": "^1.2.0",
+    "react-functional": "3.0.2",
     "react-test-renderer": "^15.6.1",
     "redux-mock-store": "^1.0.2",
     "redux-saga-test-plan": "^3.3.1",
