--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "2.4.1",
     "semantic-ui-react": "0.81.1",
+    "serialize-javascript": "^1.6.1",
     "styled-components": "^2.2.3"
   },
   "devDependencies": {
