--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,15 @@
     "release": "webpack -p",
     "test": "jest"
   },
+  "jest": {
+    "setupFiles": [
+      "./setup/LocalStorageMock.js"
+    ]
+  },
   "dependencies": {
     "axios": "^0.16.2",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
-    "js-cookie": "^2.2.0",
     "mirror-creator": "^1.1.0",
     "moment": "^2.19.4",
     "normalize-object": "^1.1.5",
