Refactor Dockerfile.release to use elixir:1.7.4-alpine, update yarn and mix dependencies, update README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     image: postgres
 
   run_release:
-    image: IMAGE:TAG
+    image: teebox-api:latest
     command: foreground
     env_file:
       - secrets.env
