--- a/client/package.json
+++ b/client/package.json
@@ -49,13 +49,13 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.6.1",
-    "compression-webpack-plugin": "^1.0.1",
+    "bundle-loader": "^0.5.6",
+    "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.14.5",
     "enzyme": "^2.3.0",
     "enzyme-to-json": "^1.5.0",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "^0.11.1",
+    "file-loader": "3.0.1",
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
     "react-dom": "^15.6.1",
@@ -65,9 +65,11 @@
     "redux-saga-test-plan": "^3.3.1",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.17.0",
-    "url-loader": "^0.5.8",
-    "webpack": "3.11.0",
-    "webpack-bundle-analyzer": "^2.10.0"
+    "uglifyjs-webpack-plugin": "^2.1.1",
+    "url-loader": "1.1.2",
+    "webpack": "4.28.4",
+    "webpack-bundle-analyzer": "^2.10.0",
+    "webpack-cli": "^3.2.1"
   },
   "main": "app.js",
   "directories": {
