--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "jest": {
     "setupFiles": [
+      "./setup/TestSetup.js",
       "./setup/LocalStorageMock.js"
     ]
   },
@@ -24,7 +25,7 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
+    "react": "^16.7.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.4",
@@ -34,7 +35,7 @@
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "2.4.1",
-    "semantic-ui-react": "0.81.1",
+    "semantic-ui-react": "0.84.0",
     "serialize-javascript": "^1.6.1",
     "styled-components": "^2.2.3"
   },
@@ -53,14 +54,15 @@
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.14.5",
-    "enzyme": "^2.3.0",
-    "enzyme-to-json": "^1.5.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
     "file-loader": "3.0.1",
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.7.0",
     "react-functional": "3.0.2",
-    "react-test-renderer": "^15.6.1",
+    "react-test-renderer": "^16.7.0",
     "redux-mock-store": "^1.0.2",
     "redux-saga-test-plan": "^3.3.1",
     "sass-loader": "^6.0.3",
