--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,8 @@
     "mirror-creator": "^1.1.0",
     "moment": "^2.19.4",
     "normalize-object": "^1.1.5",
-    "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix": "1.4.0",
+    "phoenix_html": "2.12.0",
     "prop-types": "^15.5.10",
     "react": "^16.7.0",
     "react-immutable-proptypes": "^2.1.0",
@@ -57,7 +57,10 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "enzyme-to-json": "^3.3.5",
+    "extract-css-chunks-webpack-plugin": "^3.3.2",
     "file-loader": "3.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-template": "^6.2.0",
     "jest": "^20.0.0",
     "node-sass": "^4.5.2",
     "react-dom": "^16.7.0",
