Profile migration, schema, and tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     image: teebox_web
     volumes_from:
       - web
-    command: mix test
+    command: mix test test/lib/teebox/profiles/schemas/profile_test.exs
     environment:
       - MIX_ENV=test
       - PORT=4001
