--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.16.2",
     "history": "^4.6.1",
     "immutable": "^3.8.1",
+    "js-cookie": "^2.2.0",
     "mirror-creator": "^1.1.0",
     "moment": "^2.19.4",
     "normalize-object": "^1.1.5",
