--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "3.9"
 services:
   web:
     build: .
@@ -22,6 +22,10 @@ services:
 
   dev_db:
     image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=teebox_dev
 
   test:
     image: teebox_web
@@ -36,11 +40,15 @@ services:
       - DB_ENV_POSTGRES_PASSWORD=postgres
       - DB_ENV_POSTGRES_HOST=test_db
       - SECRET_KEY_BASE=SECRET_KEY_BASE
-    depends_on:
+    links:
       - test_db
 
   test_db:
     image: postgres
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=teebox_test
 
   run_release:
     image: teebox-api:latest
@@ -57,7 +65,7 @@ services:
       - SECRET_KEY_BASE=SECRET_KEY_BASE
     ports:
       - "5001:5001"
-    depends_on:
+    links:
       - release_db
 
   release_db:
